tests/conformance/syntax/negative/end_coend_proof_operators_missing_paren_invalid.ditt
module Syntax.EndCoendProofOperatorsBad where

postulate
  C : Cat
  P : (x : C) -> Prop
  alpha : (x : C) -> P x

bad_pack : ∫ (x : C). P x = end(alpha
